Refixed image links due to publish issue

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/about.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/about.html
@@ -6,11 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - ArtSpire</title>
     <link rel="stylesheet" href="style.css">
-    <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <!-- Google Fonts -->
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&family=Sora:wght@600;700&display=swap"
         rel="stylesheet">
@@ -18,20 +15,16 @@
 </head>
 
 <body class="about-page">
-    <!-- Skip to main content link for accessibility -->
     <a href="#main-content" class="skip-to-main">Skip to main content</a>
 
-    <!-- Navigation -->
     <nav class="navbar navbar-expand-lg fixed-top" role="navigation" aria-label="Primary navigation">
         <div class="container">
             <a class="navbar-brand" href="index.html" aria-label="ArtSpire Home">Art<span>Spire</span></a>
-            <!-- Mobile Only: Hamburger Button -->
             <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#mobileNav" aria-controls="mobileNav" aria-expanded="false"
                 aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
-            <!-- Desktop Navigation -->
             <div class="collapse navbar-collapse d-none d-lg-flex" id="navbarNav">
                 <ul class="navbar-nav ms-auto me-3">
                     <li class="nav-item">
@@ -64,7 +57,6 @@
         </div>
     </nav>
 
-    <!-- Mobile Offcanvas Navigation -->
     <div class="offcanvas offcanvas-end" tabindex="-1" id="mobileNav" aria-labelledby="mobileNavLabel">
         <div class="offcanvas-header">
             <h5 class="offcanvas-title" id="mobileNavLabel">Art<span>Spire</span></h5>
@@ -101,7 +93,6 @@
         </div>
     </div>
 
-    <!-- About Hero Section -->
     <section class="about-hero" id="main-content">
         <div class="container">
             <div class="row">
@@ -114,7 +105,6 @@
         </div>
     </section>
 
-    <!-- Our Story Section -->
     <section class="about-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -134,7 +124,6 @@
         </div>
     </section>
 
-    <!-- Mission & Vision Section -->
     <section class="about-section bg-light">
         <div class="container">
             <div class="row">
@@ -166,7 +155,6 @@
         </div>
     </section>
 
-    <!-- Stats Section -->
     <section class="stats-container">
         <div class="container">
             <div class="row">
@@ -198,7 +186,6 @@
         </div>
     </section>
 
-    <!-- Features Section -->
     <section class="features-section">
         <div class="container">
             <div class="row justify-content-center mb-5">
@@ -242,7 +229,6 @@
         </div>
     </section>
 
-    <!-- Team Section -->
     <section class="team-section">
         <div class="container">
             <div class="row justify-content-center mb-5">
@@ -255,7 +241,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Sarah Johnson.jpg" alt="Sarah Johnson - CEO & Co-founder">
+                            <img src="Pictures/Sarah Johnson.jpg" alt="Sarah Johnson - CEO & Co-founder">
                         </div>
                         <h4 class="team-name">Sarah Johnson</h4>
                         <div class="team-title">CEO & Co-founder</div>
@@ -266,7 +252,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Micheal Chen.jpg" alt="Michael Chen - CTO & Co-founder">
+                            <img src="Pictures/Micheal Chen.jpg" alt="Michael Chen - CTO & Co-founder">
                         </div>
                         <h4 class="team-name">Michael Chen</h4>
                         <div class="team-title">CTO & Co-founder</div>
@@ -277,7 +263,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="Emma Rodriguez.jpg" alt="Emma Rodriguez - Head of Community">
+                            <img src="Pictures/Emma Rodriguez.jpg" alt="Emma Rodriguez - Head of Community">
                         </div>
                         <h4 class="team-name">Emma Rodriguez</h4>
                         <div class="team-title">Head of Community</div>
@@ -288,7 +274,7 @@
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card">
                         <div class="team-photo">
-                            <img src="David Thompson.jpg" alt="David Thompson - Head of Design">
+                            <img src="Pictures/David Thompson.jpg" alt="David Thompson - Head of Design">
                         </div>
                         <h4 class="team-name">David Thompson</h4>
                         <div class="team-title">Head of Design</div>
@@ -300,7 +286,6 @@
         </div>
     </section>
 
-    <!-- CTA Section -->
     <section class="cta-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -314,11 +299,9 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer>
         <div class="container">
             <div class="row">
-                <!-- About -->
                 <div class="col-lg-4 col-md-6 footer-about">
                     <div class="footer-logo">Art<span>Spire</span></div>
                     <p>A creative hub designed for artists and art enthusiasts to share, showcase, and discover artwork
@@ -331,7 +314,6 @@
                     </div>
                 </div>
 
-                <!-- Quick Links -->
                 <div class="col-lg-2 col-md-6">
                     <h4 class="footer-heading">Quick Links</h4>
                     <ul class="footer-links">
@@ -343,7 +325,6 @@
                     </ul>
                 </div>
 
-                <!-- Support -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="footer-heading">Support</h4>
                     <ul class="footer-links">
@@ -355,7 +336,6 @@
                     </ul>
                 </div>
 
-                <!-- Contact Info -->
                 <div class="col-lg-3 col-md-6">
                     <h4 class="footer-heading">Contact Us</h4>
                     <div class="footer-contact-item">
@@ -373,7 +353,6 @@
                 </div>
             </div>
 
-            <!-- Copyright -->
             <div class="copyright">
                 <p>© 2025 ArtSpire. All Rights Reserved. Designed with <i class="fas fa-heart"
                         style="color: var(--watermelon-red);"></i> for artists.</p>
@@ -381,14 +360,11 @@
         </div>
     </footer>
 
-    <!-- Back to top button -->
     <button id="back-to-top" class="back-to-top-btn" aria-label="Back to top">
         <i class="fas fa-chevron-up"></i>
     </button>
 
-    <!-- Bootstrap JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
-    <!-- Custom JS -->
     <script src="script.js"></script>
 </body>
 
