Refixed image links due to publish issue

--- a/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
+++ b/Introduction to Web Development_Task 3_ Project Document_CAWEB-506-1503_AuroraMifsud/index.html
@@ -137,7 +137,7 @@
                 <!-- Artist 1 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="artist-card card">
-                        <img src="Pictures/Elena Rodriguez.jpg" alt="Artist Elena Rodriguez" class="card-img-top">
+                        <img src="Pictures/Emma Rodriguez.jpg" alt="Artist Elena Rodriguez" class="card-img-top">
                         <div class="card-body">
                             <span class="artist-category">Digital Artist</span>
                             <h3 class="card-title">Elena Rodriguez</h3>
@@ -171,7 +171,7 @@
                 <!-- Artist 3 -->
                 <div class="col-lg-4 col-md-6">
                     <div class="artist-card card">
-                        <img src="Pictures/Amara Okafor.jpg" alt="Artist Amara Okafor" class="card-img-top">
+                        <img src="Pictures/Sarah Johnson.jpg" alt="Artist Amara Okafor" class="card-img-top">
                         <div class="card-body">
                             <span class="artist-category">Sculptor</span>
                             <h3 class="card-title">Amara Okafor</h3>
